<resources>
    <string name="app_name">Apex Code Assesment</string>
    <string name="action_settings">Settings</string>
    <string name="my_random_user">My random user</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="view_details">View details</string>
    <string name="refresh_random_user">Refresh random user</string>
    <string name="show_10_users">Show 10 users</string>
    <string name="calculate_distance_button_details">Calculate distance from current location</string>
    <string name="calculate_distance_button">Calculate distance</string>
    <string name="location_coordinates_error">Invalid user coordinates</string>
    <string name="details_image">Details image</string>
    <string name="user_profile_image">User profile image</string>
    <string name="flip_icon">Flip between XML and Jetpack compose UI</string>

    <string name="main_name"> %1$s %2$s</string>
    <string name="details_name">Name: %1$s %2$s</string>
    <string name="details_email">Email: %s</string>
    <string name="details_age">Age: %d</string>
    <string name="details_location">Location: (%1$s, %2$s)</string>
    <string name="location_random_user">Location of random user: (%1$.6f, %2$.6f)</string>
    <string name="location_phone">Location of this phone: (%1$.6f, %2$.6f)</string>
    <string name="location_result_miles">Distance: %.2f miles</string>


</resources>