<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_medium"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/my_random_user"
        android:textAppearance="?textAppearanceHeadline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="@dimen/user_profile_thumbnail_width"
        android:layout_height="@dimen/user_profile_thumbnail_height"
        android:layout_marginTop="@dimen/space_small"
        android:background="@color/grey"
        android:contentDescription="@string/user_profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title" />


    <TextView
        android:id="@+id/main_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:text="@string/name"
        android:textAppearance="?textAppearanceBody2"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/main_image"
        app:layout_constraintTop_toTopOf="@id/main_image" />

    <TextView
        android:id="@+id/main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_very_small"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintLeft_toRightOf="@id/main_name_label"
        app:layout_constraintTop_toTopOf="@id/main_name_label"
        tools:text="Jon" />


    <TextView
        android:id="@+id/main_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:text="@string/email"
        android:textAppearance="?textAppearanceBody2"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/main_image"
        app:layout_constraintTop_toBottomOf="@id/main_name_label" />

    <TextView
        android:id="@+id/main_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_very_small"
        android:maxLines="2"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintLeft_toRightOf="@id/main_email_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_email_label"
        tools:text="robert@test.com" />

    <Button
        android:id="@+id/main_sceen_details_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/view_details"
        app:layout_constraintLeft_toRightOf="@id/main_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_email" />

    <Button
        android:id="@+id/main_refresh_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/refresh_random_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_sceen_details_button" />

    <View
        android:id="@+id/main_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_small"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_refresh_button" />

    <Button
        android:id="@+id/main_user_list_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/show_10_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_user_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_user_list_button" />

    <ProgressBar
        android:id="@+id/user_list_loading"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_user_list_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_compose_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_medium"
        android:contentDescription="@string/flip_icon"
        android:src="@drawable/ic_flip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
